<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<!-- P2P Call Action -->
	<item
		android:id="@+id/action_voice_call"
		android:icon="@drawable/ic_phone"
		android:title="Voice Call"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_all_media"
		android:title="@string/all_media"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_chat_settings"
		android:title="@string/chat_settings"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_disappearing_messages"
		android:title="@string/menu_item_disappearing_messages"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_clear_chat"
		android:title="@string/clear_chat"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_block_user"
		android:title="@string/block_user"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_social_remove_person"
		android:title="@string/delete_contact"
		app:showAsAction="never" />

</menu>
